# coms327

./: README.md
spring327project-master/spring327project-master/Reference/Project/: .gitignore  CMakeLists.txt  Makefile  change.c  config.c  edit  edit.c  errors.c  helpers.c  info.c  labeledBoard.txt  moves.c  rank.c  rankmoves.c  render.c
spring327project-master/spring327project-master/Reference/Project/JAYS_Part2_Tests/: bad15.exchange.txt  bad15.human.txt  bad15.stdout.txt  bad15.txt  bad16.exchange.txt  bad16.human.txt  bad16.stdout.txt  bad16.txt  bad17.exchange.txt  bad17.human.txt  bad17.stdout.txt  bad17.txt  capture_bad01.exchange.txt  capture_bad01.human.txt  capture_bad01.stdout.txt  capture_bad01.txt  capture_bad02.exchange.txt  capture_bad02.human.txt  capture_bad02.stdout.txt  capture_bad02.txt  capture_bad03.exchange.txt  capture_bad03.human.txt  capture_bad03.stdout.txt  capture_bad03.txt  capture_bad04.exchange.txt  capture_bad04.human.txt  capture_bad04.stdout.txt  capture_bad04.txt  capture_bad05.exchange.txt  capture_bad05.human.txt  capture_bad05.stdout.txt  capture_bad05.txt  capture_good01.exchange.txt  capture_good01.human.txt  capture_good01.txt  flipped_bad01.exchange.txt  flipped_bad01.human.txt  flipped_bad01.stdout.txt  flipped_bad01.txt  flipped_bad02.exchange.txt  (+102 more)
spring327project-master/spring327project-master/Reference/Project/JAYS_Part3_Tests/: capture01.d0.out.brief.txt  capture01.d0.out.verbose.txt  capture01.d0.txt  capture01.d1.out.brief.txt  capture01.d1.out.verbose.txt  capture01.d1.txt  capture01.d2.out.verbose.txt  (+77 more)
(+267 files in other folders)
